[gd_scene load_steps=5 format=3 uid="uid://67dvn3g62ato"]

[ext_resource type="Script" path="res://scripts/environment/hook_target.gd" id="1_5xffu"]
[ext_resource type="Texture2D" uid="uid://dsgodyoamgbn7" path="res://textures/environment/hook.png" id="2_t3hi8"]

[sub_resource type="SphereShape3D" id="SphereShape3D_ro0na"]

[sub_resource type="SphereShape3D" id="SphereShape3D_532hj"]
radius = 40.0

[node name="HookTarget" type="StaticBody3D"]
script = ExtResource("1_5xffu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_ro0na")

[node name="ActivationArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ActivationArea"]
shape = SubResource("SphereShape3D_532hj")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, 0, 0, 0)
billboard = 1
texture_filter = 0
texture = ExtResource("2_t3hi8")
hframes = 2

[connection signal="body_entered" from="ActivationArea" to="." method="_on_activation_area_body_entered"]
[connection signal="body_exited" from="ActivationArea" to="." method="_on_activation_area_body_exited"]
